--- a/BlockEscape/Base.lproj/Main.storyboard
+++ b/BlockEscape/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,58 +16,62 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3pH-wq-URq">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="menu_background.png" translatesAutoresizingMaskIntoConstraints="NO" id="sA4-C5-x8f">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3pH-wq-URq">
                                 <rect key="frame" x="109" y="576" width="196" height="74"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal">
-                                    <attributedString key="attributedTitle">
-                                        <fragment content="Start">
-                                            <attributes>
-                                                <color key="NSColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <font key="NSFont" size="50" name=".AppleSystemUIFont"/>
-                                            </attributes>
-                                        </fragment>
-                                    </attributedString>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" backgroundImage="start_button.png">
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
                                 </state>
                                 <connections>
                                     <segue destination="V9y-lv-cfV" kind="show" id="T3w-Qv-hvn"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eo6-Bl-Nrs">
-                                <rect key="frame" x="232" y="700" width="104" height="30"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Clear Scores">
-                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="0.84705882352941175" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="clearScoresOnClick:" destination="BV1-FR-VrT" eventType="touchUpInside" id="cbB-br-44h"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ZT-8L-l5v">
-                                <rect key="frame" x="80" y="700" width="104" height="30"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
-                                <state key="normal" title="Scores">
-                                    <color key="titleColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2ZT-8L-l5v">
+                                <rect key="frame" x="57" y="688" width="129" height="77"/>
+                                <state key="normal" backgroundImage="scores_button.png">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Scores">
+                                            <attributes>
+                                                <color key="NSColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <font key="NSFont" size="15" name=".AppleSystemUIFont"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
                                 </state>
                                 <connections>
                                     <segue destination="Peq-wx-c2X" kind="show" id="LgS-P9-zrm"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eo6-Bl-Nrs">
+                                <rect key="frame" x="239" y="688" width="130" height="77"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="130" id="nPh-Ib-FVA"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="clear_scores_button.png">
+                                    <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="clearScoresOnClick:" destination="BV1-FR-VrT" eventType="touchUpInside" id="cbB-br-44h"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Eo6-Bl-Nrs" firstAttribute="centerX" secondItem="2ZT-8L-l5v" secondAttribute="centerX" constant="152" id="2OV-Mo-c3f"/>
-                            <constraint firstItem="Eo6-Bl-Nrs" firstAttribute="leading" secondItem="4qk-I5-YsI" secondAttribute="leading" constant="232" id="D7Q-06-RCD"/>
-                            <constraint firstItem="4qk-I5-YsI" firstAttribute="trailing" secondItem="2ZT-8L-l5v" secondAttribute="trailing" constant="230" id="FVd-hx-ZnH"/>
-                            <constraint firstItem="2ZT-8L-l5v" firstAttribute="leading" secondItem="4qk-I5-YsI" secondAttribute="leading" constant="80" id="JvY-H0-msB"/>
-                            <constraint firstItem="4qk-I5-YsI" firstAttribute="bottom" secondItem="2ZT-8L-l5v" secondAttribute="bottom" constant="132" id="QtK-Zp-Rii"/>
-                            <constraint firstItem="2ZT-8L-l5v" firstAttribute="top" secondItem="3pH-wq-URq" secondAttribute="bottom" constant="50" id="Svn-nF-D5c"/>
-                            <constraint firstItem="4qk-I5-YsI" firstAttribute="trailing" secondItem="3pH-wq-URq" secondAttribute="trailing" constant="109" id="WQy-bD-U6k"/>
-                            <constraint firstItem="3pH-wq-URq" firstAttribute="leading" secondItem="4qk-I5-YsI" secondAttribute="leading" constant="109" id="dDB-GH-5iR"/>
-                            <constraint firstItem="3pH-wq-URq" firstAttribute="top" secondItem="4qk-I5-YsI" secondAttribute="top" constant="532" id="j0I-P3-ITR"/>
-                            <constraint firstItem="Eo6-Bl-Nrs" firstAttribute="top" secondItem="2ZT-8L-l5v" secondAttribute="bottom" constant="-30" id="sfe-3O-xQi"/>
-                            <constraint firstItem="4qk-I5-YsI" firstAttribute="bottom" secondItem="3pH-wq-URq" secondAttribute="bottom" constant="212" id="sne-QZ-NUe"/>
+                            <constraint firstItem="3pH-wq-URq" firstAttribute="top" secondItem="4qk-I5-YsI" secondAttribute="top" constant="532" id="8xb-rR-LD4"/>
+                            <constraint firstItem="3pH-wq-URq" firstAttribute="centerX" secondItem="sA4-C5-x8f" secondAttribute="centerX" id="9FR-aA-i0w"/>
+                            <constraint firstItem="4qk-I5-YsI" firstAttribute="bottom" secondItem="Eo6-Bl-Nrs" secondAttribute="bottom" constant="97" id="FtO-w6-8xJ"/>
+                            <constraint firstItem="3pH-wq-URq" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="IEI-0S-DbU"/>
+                            <constraint firstItem="2ZT-8L-l5v" firstAttribute="leading" secondItem="4qk-I5-YsI" secondAttribute="leading" constant="57" id="L5t-Hg-JSI"/>
+                            <constraint firstItem="Eo6-Bl-Nrs" firstAttribute="top" secondItem="3pH-wq-URq" secondAttribute="bottom" constant="38" id="QZx-QU-SFy"/>
+                            <constraint firstItem="2ZT-8L-l5v" firstAttribute="top" secondItem="Eo6-Bl-Nrs" secondAttribute="top" id="TWk-WF-TVV"/>
+                            <constraint firstItem="3pH-wq-URq" firstAttribute="leading" secondItem="4qk-I5-YsI" secondAttribute="leading" constant="109" id="Vax-qh-35p"/>
+                            <constraint firstItem="4qk-I5-YsI" firstAttribute="trailing" secondItem="Eo6-Bl-Nrs" secondAttribute="trailing" constant="45" id="Wk3-Fg-v6Z"/>
+                            <constraint firstItem="Eo6-Bl-Nrs" firstAttribute="leading" secondItem="2ZT-8L-l5v" secondAttribute="trailing" constant="53" id="iIe-rA-ioQ"/>
+                            <constraint firstItem="2ZT-8L-l5v" firstAttribute="bottom" secondItem="Eo6-Bl-Nrs" secondAttribute="bottom" id="xJL-tl-Ajk"/>
+                            <constraint firstItem="sA4-C5-x8f" firstAttribute="centerY" secondItem="3se-qz-xqx" secondAttribute="centerY" id="yKa-Nc-qo5"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="4qk-I5-YsI"/>
                     </view>
@@ -83,11 +85,11 @@
             <objects>
                 <viewController id="V9y-lv-cfV" customClass="GameViewController" customModule="BlockEscape" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KIe-x8-tA8" customClass="SKView">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Il9-NG-lsr">
-                                <rect key="frame" x="328" y="158" width="66" height="44"/>
+                                <rect key="frame" x="328" y="114" width="66" height="44"/>
                                 <color key="backgroundColor" red="0.24692971328048774" green="0.47450980390000003" blue="0.077570829856268522" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="F2a-l0-CFd"/>
@@ -99,7 +101,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tQA-5z-W7l">
-                                <rect key="frame" x="328" y="67" width="66" height="42"/>
+                                <rect key="frame" x="328" y="23" width="66" height="42"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="c3a-fr-eCl"/>
@@ -133,11 +135,11 @@
             <objects>
                 <viewController id="Peq-wx-c2X" customClass="ScoresViewController" customModule="BlockEscape" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="B5t-pZ-4S1">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Qek-uh-CkV">
-                            <rect key="frame" x="0.0" y="72" width="414" height="44"/>
+                            <rect key="frame" x="0.0" y="99.5" width="414" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <state key="normal" title="Exit"/>
                             <connections>
@@ -146,7 +148,7 @@
                         </button>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="scoreCell" id="xTG-gc-qc8">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xTG-gc-qc8" id="6TT-jy-BdO">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -167,6 +169,12 @@
             <point key="canvasLocation" x="993" y="-539"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="clear_scores_button.png" width="106.5" height="57.75"/>
+        <image name="menu_background.png" width="414" height="896"/>
+        <image name="scores_button.png" width="106.5" height="43.5"/>
+        <image name="start_button.png" width="91.5" height="43.5"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="LgS-P9-zrm"/>
     </inferredMetricsTieBreakers>
